// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleEditorPublishButton default snapshot  1`] = `
<span
  class="nav-link post-article disable"
>
  
  公開する

</span>
`;

exports[`ArticleEditorPublishButton publishable snapshot  1`] = `
<span
  class="nav-link post-article"
>
  
  公開する

</span>
`;
